# GL

./: .env  Cargo.toml  database structure.txt  docker-compose.yml  endpoints.md
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-207af2bacf5a84f919cd1c40fd99e45744435bc68a17d4a1bc7449ace3114c69.json  query-21a8079aedc65c756fc6db96f80afc81ed24e35f82c988f65713b65ef2f55bab.json  query-3686d323865ad8757eb1167a995b7951ff014c7caa1cd3b577abd0cc01eab67f.json  query-44abd85b02422256a9ad71eedf7381b5fd9ba0e0934c51237d72bf06887eb58d.json  query-67937490e0757e8f28afe049a90eb0344cdd050a7a401b4a64ab254bac0b73a3.json  query-6bf13fb0d59f9db7dc58d4e999922b65c33255af866ab221641e1153bb7d6125.json  query-80983b5ee397add89f8812442000f4b47814cf0fa47e10280dd3b806268e7a64.json  query-84773ce0e9ea12b31ae75962a1abcfa8d3b0b5a40f0cbba766b9c25dd88a438e.json  query-9f1288bec3fb9acfc01ca44fca35e27bb0a094abaffef94adb397486c6c7aa1a.json  query-b462b9e955ce6b423498e6d43480c3cb81384c7e2368b464d5a3354105ac17f9.json  query-ce83752b25bc722d1cdbb903c092d247cd812c5b5b88ece56e1fa2d469e16ea0.json  query-d0ba3a95c2ebe7461676b00f307d49cc4d52dac83bb04ebb07a70a6a0f18e43d.json  query-d4e69722cb52ff1da9bd0b43736c705f743bf48641c55e247d93e1bf43eb3a69.json  query-e60ab5a164c9fbc7c2dc5f5af117e94eb82ab66d4679281b441db8b4ee56708e.json  query-f70a23735849599bb9503728a5df7890503f21e4752cc302448c826a16fe69d2.json
backend/src/: logging.rs  main.rs
backend/src/application/: contracts.rs  mod.rs  ports.rs
backend/src/application/helpers/: file_type_determinator.rs  mod.rs
backend/src/application/use_cases/: files.rs  mod.rs  playlists.rs  posts.rs  services.rs  tags.rs
backend/src/domain/: files.rs  mod.rs  model.rs  repository.rs
backend/src/storage/: in_memory.rs  mod.rs
backend/src/storage/file_storage/: files.rs
backend/src/storage/postgres/: dto.rs  files.rs  mod.rs  playlists.rs  posts.rs  tags.rs  users.rs
backend/src/web/: error.rs  mod.rs  web_server.rs
docs/: endpoints.md  (+1 more)
(+94 files in other folders)
