[package]
name = "GL"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "fast-rng"] }
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
