[package]
name = "GL"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "fast-rng"] }
argon2 = "0.5.3"
actix-web = "4.12.1"
actix-files = "0.6.9"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-identity = "0.9.0"
actix-multipart = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dotenv = "0.15.0"
futures-util = "0"

